upgrade version from 9.1.0 to 9.1.1

--- a/web/studio/ASC.Web.Studio/UserControls/Users/UserProfile/css/userlanguages.less
+++ b/web/studio/ASC.Web.Studio/UserControls/Users/UserProfile/css/userlanguages.less
@@ -92,5 +92,6 @@
 .usrLang.ko-KR, .languageMenu ul.options li.option.ko-KR a{background-image:url("images/flags.png"); background-position: left -435px;}
 .usrLang.ja-JP, .languageMenu ul.options li.option.ja-JP a{background-image:url("images/flags.png"); background-position: left -457px;}
 .usrLang.sl-SI, .languageMenu ul.options li.option.sl-SI a{background-image:url("images/flags.png"); background-position: left -479px;}
+.usrLang.sk-SK, .languageMenu ul.options li.option.sk-SK a{background-image:url("images/flags.png"); background-position: left -501px;}
 
 .languageMenu ul.options li.option.selected a{color:#116d9d;}
